# BoundaryBench-Context-Integrity

./: .gitignore  EVAL_CARD.md  README.md  pyproject.toml
data/: prompt_injection_cases.jsonl
docs/: SCIENTIFIC_RATIONALE.md
safeprompt_signal/: __init__.py  eval.py  scoring.py
scripts/: render_assets.py  run_local_demo.py
tests/: __init__.py  test_scoring.py
