[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safeprompt-signal"
version = "0.1.0"
description = "An Inspect AI benchmark for measuring prompt-injection resistance and safety-policy retention."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Harshitha" }
]
dependencies = []

[project.optional-dependencies]
inspect = ["inspect-ai"]
dev = []

[tool.setuptools.packages.find]
include = ["safeprompt_signal*"]

