[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boundarybench-context-integrity"
version = "0.1.0"
description = "A UK AISI Inspect benchmark for context-boundary integrity under instruction conflict."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Harshitha" }
]
dependencies = []

[project.optional-dependencies]
inspect = ["inspect-ai"]
dev = []

[tool.setuptools.packages.find]
include = ["safeprompt_signal*"]
